# loopsandribbons

./: .gitignore  README.md
loops_api/: 6X18.cif  8RX0.cif  loop_predictor.py  main.py  models.py  pyproject.toml  routes.py  test_loop_predictor.py  test_rarefold.py
loops_api/data/: 3IDP.cif
loops_api/predictions/: metadata.json
loops_api/predictions/loop_prediction_20250614_001350/: model.D00000001  model.D00000002  model.DL00010001  model.DL00010002  model.DL00020001  model.DL00020002  model.V99990001  model.V99990002  model.ini  model.lrsr  model.rsr  prediction_summary.json
loops_api/predictions/loop_prediction_20250614_001419/: model.D00000001  model.D00000002  model.DL00010001  model.DL00010002  model.DL00020001  model.DL00020002  model.V99990001  model.V99990002  model.ini  model.rsr  prediction_summary.json
loops_api/predictions/loop_prediction_20250614_001443/: model.D00000001  model.D00000002  model.DL00010001  model.DL00010002  model.DL00020001  model.DL00020002  model.V99990001  model.V99990002  model.ini  model.lrsr  prediction_summary.json
loops_api/predictions/loop_prediction_20250614_003617/: model.D00000001  model.ini
loops_api/predictions/loop_prediction_20250614_162952/: model.D00000001  model.D00000002  model.DL00010001  model.DL00010002  model.DL00020001  model.DL00020002  model.V99990001  model.V99990002  model.ini  model.lrsr  model.rsr  prediction_summary.json
loops_api/utils/: __init__.py  base_loop_predictor.py  loop_assembler.py  missing_region.py  modeller_predictor.py  prediction_result.py  simple_predictor.py
(+22 files in other folders)
